force-app/main/default/objects/Order_Status_Changed__e/Order_Status_Changed__e.object-meta.xml
<CustomObject>
    <label>Order Status Changed</label>
    <pluralLabel>Order Status Changed Events</pluralLabel>
</CustomObject>