force-app/main/default/objects/Order_Status_Changed__e/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName><label>New Status</label><type>Text</type><length>50</length>
</CustomField>