force-app/main/default/objects/Order_Status_Changed__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName><label>Order ID</label><type>Text</type><length>18</length>
</CustomField>