force-app/main/default/objects/Order_Status_Changed__e/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName><label>Previous Status</label><type>Text</type><length>50</length>
</CustomField>